Fixed some stying issues Added TODO tracking file Added server URL to .env Added basic loading screen Moved userID to a readable store Various fixes

--- a/src/app.scss
+++ b/src/app.scss
@@ -40,3 +40,7 @@
 body {
 	padding: var(--size-6);
 }
+
+:where(:not(:active):focus-visible) {
+	outline-offset: 0;
+}
